<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Generic Game 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_or_load">NewOrLoad</string>
    <string name="title_activity_slot_select">SlotSelect</string>
    <string name="title_activity_create_new_game">CreateNewGame</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_battle">Battle</string>
    
    <string name="touch_to_continue">Touch to Continue</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="name_entry">Enter Your Name:</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_3">Slot 3</string>
    <string name="slot_4">Slot 4</string>

</resources>