<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlotSelect" >

    <TextView
        android:id="@+id/slot_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:text="@string/slot_1"
        android:clickable="true"
        android:onClick="slotSwitch" />

    <TextView
        android:id="@+id/slot_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slot_1"
        android:text="@string/slot_2"
        android:clickable="true"
        android:onClick="slotSwitch" />

    <TextView
        android:id="@+id/slot_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/slot_3"
        android:clickable="true"
        android:onClick="slotSwitch" />
    
    <TextView
        android:id="@+id/slot_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slot_3"
        android:text="@string/slot_4"
        android:clickable="true"
        android:onClick="slotSwitch" />

</RelativeLayout>